--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.14.0",
+    "eslint-plugin-babel": "^4.0.1",
+    "eslint-plugin-react": "^6.9.0",
     "react-scripts": "0.9.3"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "build": "^0.1.4",
+    "foreman": "^2.0.0",
+    "json-server": "^0.9.4",
     "express": "^4.15.0",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
