--- a/package.json
+++ b/package.json
@@ -12,15 +12,32 @@
   "dependencies": {
     "axios": "^0.15.3",
     "build": "^0.1.4",
-    "foreman": "^2.0.0",
-    "json-server": "^0.9.4",
+    "dotenv": "^4.0.0",
+    "enzyme": "^2.7.1",
     "express": "^4.15.0",
+    "foreman": "^2.0.0",
+    "google-maps-react": "^1.0.19",
+    "json-server": "^0.9.4",
+    "lodash": "^4.17.4",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-gmaps": "^1.5.0",
+    "react-google-maps": "^4.11.0",
+    "react-helmet": "^4.0.0",
+    "react-mapbox-gl": "^1.3.4",
+    "react-redux": "^5.0.3",
+    "react-router-dom": "next",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nf start",
+    "lint": "eslint src",
+    "react-app": "react-scripts start",
+    "api": "json-server --id _id --watch --port 4000 db.json",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
